# jt-voice

./: .env.example  .gitignore  README.md  api.py  main.py  package-lock.json  pyproject.toml  trader.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/hooks/: useSpeechRecognition.js
frontend/src/lib/: api.js  commands.js
