[project]
name = "voice-trading-agent"
version = "0.1.0"
description = "Voice-controlled MetaTrader 5 agent for XAUUSDr"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "MetaTrader5>=5.0.45",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
voice-server = "api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "api.py", "trader.py"]

[tool.uv]
package = true
